# C-RPG

./: .gitignore  Makefile  README.md  meson.build
include/core/: game.h  menu.h  settings.h
include/game/: game.h  menu.h
include/utils/: state_table.h  terminal.h
src/: main.c
src/core/: game.c  menu.c  settings.c
src/game/: game.c  menu.c
src/utils/: state_table.c  terminal.c  terminal.h
